# lf-automator

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_token_inventory.sh  start.py  tailwind.config.js  test_connection_fix.py  uwsgi.ini  wsgi.py
.github/workflows/: flyway-migrations.yml  lint-and-test.yml
.kiro/steering/: product.md  structure.md  tech.md
lf-automator/: main.py
lf-automator/automator/: automation.py
lf-automator/automator/alertmanager/: alert.py
lf-automator/automator/config/: loader.py
lf-automator/automator/counttimestamp/: timestamp.py
lf-automator/automator/database/: db.py
lf-automator/automator/inventoryautomator/: automator.py
lf-automator/automator/mailer/: send.py
lf-automator/automator/membersync/: __init__.py  sync.py
lf-automator/automator/scheduler/: scheduler.py
lf-automator/automator/tokenpools/: pools.py
lf-automator/automator/tokenregistry/: __init__.py
lf-automator/db-automator/migrations/: V001_20241013143045__carstenskov.sql
lf-automator/tests/: conftest.py  test_automator.py  test_database.py  test_tokenpools.py  test_webapp.py  test_webapp_ui.py
lf-automator/webapp/: __init__.py  app.py  auth.py  routes.py
lf-automator/webapp/templates/: base.html  login.html
lf_automator/: main.py
lf_automator/automator/: automation.py
lf_automator/automator/alertmanager/: __init__.py  alert.py
lf_automator/automator/config/: __init__.py
lf_automator/automator/counttimestamp/: __init__.py  timestamp.py
lf_automator/automator/database/: db.py
lf_automator/automator/inventoryautomator/: __init__.py  automator.py
lf_automator/db-automator/: flyway.toml
lf_automator/tests/: conftest.py  test_alertmanager.py  test_automator.py  test_config_loader.py  test_config_route.py  test_counttimestamp.py  test_database.py  test_deposit_ui.py  test_membersync.py  test_scheduler.py  test_scheduler_manager.py  test_sendmail.py  test_tokenpools.py  test_tokenregistry.py  test_webapp.py  test_webapp_ui.py
lf_automator/webapp/: app.py  routes.py  scheduler_manager.py
templates/: threshold_alert.html
(+15 files in other folders)
